# imgii

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  alphabettest.txt  asciisimplertest.txt
.github/workflows/: rust.yml
helper_scripts/: convert_gif_to_pngs.sh  convert_images_to_ascii.sh  convert_pngs_to_ascii.sh  convert_pngs_to_gif.sh  optimize_gif.sh
src/: ascii_image_options.rs  conversion.rs  error.rs  fonts.rs  image_converter.rs  image_data.rs  image_helper.rs  image_reader.rs  image_types.rs  image_writer.rs  lib.rs  main.rs  options.rs  render_char_to_png.rs
src/conversion/: converters.rs  image_data.rs  image_writer.rs  render_char_to_png.rs
src/conversion/converters/: generic_converter.rs  gif_converter.rs  png_converter.rs
src/image_helper/: ascii_image_options.rs  error.rs  image_converter.rs  image_converters.rs  image_data.rs  image_writer.rs  render_char_to_png.rs
src/image_helper/image_converters/: generic_converter.rs  gif_converter.rs  png_converter.rs
