[package]
name = "imgii"
authors = ["Stattek"]
version = "0.7.3"
edition = "2024"
license = "MIT"
description = "ASCII Image Generator"
repository = "https://github.com/Stattek/imgii"
keywords = ["ascii", "image", "art", "render"]
categories = ["multimedia::images"]
readme = "README.md"

[dependencies]
ab_glyph = "0.2.32"
clap = "4.5.48"
env_logger = "0.11.8"
image = { version = "0.25.8", features = ["gif"]}
imageproc = "0.25.0"
log = "0.4.28"
num_cpus = "1.17.0"
rascii_art_img = "0.4.7"
rayon = "1.11.0"
regex = "1.12.1"

[profile.release]
opt-level=3
strip=true
